part1/kubernetes/gateway/gc-kubehelvetti-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gc-kubehelvetti-httproute
spec:
  parentRefs:
    - name: gc-kubehelvetti-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-output-svc
          namespace: exercises
          port: 80
